--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -1,6 +1,5 @@
 .layoutContainer {
   height: 100%;
-  background-color: #fff;
   display: flex;
   flex-direction: column;
 }
@@ -12,4 +11,6 @@
 .main {
   flex: 1;
   overflow: auto;
+  background-color: #f0f2f5;
+  padding: 16px;
 }
