--- a/src/layouts/Nav.less
+++ b/src/layouts/Nav.less
@@ -1,5 +1,8 @@
 .navContainer {
-  width: 250px;
+  width: 220px;
+  box-shadow: 0 2px 8px #f0f1f2;
+  position: relative;
+  z-index: 5;
   :global {
     .ant-menu {
       border-right: none;
