--- a/src/layouts/basicLayout/Header.less
+++ b/src/layouts/basicLayout/Header.less
@@ -1,20 +1,22 @@
 .headerContainer {
-  height: 50px;
-  padding: 0 20px;
-  flex: none;
-  box-shadow: rgba(0, 0, 0, 0.15) 2px 3px 8px -1px;
   position: relative;
   z-index: 10;
   display: flex;
+  flex: none;
   align-items: center;
+  height: 50px;
+  padding: 0 20px;
+  box-shadow: rgb(0 0 0 / 15%) 2px 3px 8px -1px;
+
   & > img {
     width: 28px;
     height: 28px;
     object-fit: contain;
     margin-right: 16px;
   }
+
   & > h1 {
-    color: #17233d;
     font-size: 20px;
+    color: #17233d;
   }
 }
